fix: correct mobile menu button alignment vol.7

--- a/src/sass/blocks/mobile-catalog.scss
+++ b/src/sass/blocks/mobile-catalog.scss
@@ -46,8 +46,10 @@
 
 .mobile-catalog__link-icon {
   margin-right: 3px;
+  margin-bottom: 2px;
   fill: transparent;
   stroke: #a4a4a4;
+  transition: $main-transition;
 
   .mobile-catalog__back-link:hover &,
   .mobile-catalog__back-link:focus & {
